# TuBERT

./: .env.example  .gitignore  LICENSE  README.md  config.py  main.py  predict_emotion.py  predictor_classes.py  pyproject.toml  requirements.txt  sprite_window.py
model/setup/: README.md  convert_to_audio.sh  data_loader.py  feature_extractor.py  iemocap_create_metadata.py  preprocess_data.py  rnn.py  train.py
model/stats/: README.md  ablation.py  speed_test.py  test.py
